<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name of the product -->
    <LinearLayout
        android:id="@+id/container_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_name"
            style="@style/CategoryStyle" />

        <!-- Input field - Name -->
        <EditText
            android:id="@+id/edit_product_name"
            android:hint="@string/hint_product_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle" />

    </LinearLayout>

    <!-- Price of the product -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <!-- Input field - Price -->
            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier of the product -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <!-- Input field - Supplier -->
            <EditText
                android:id="@+id/edit_product_supplier"
                android:hint="@string/hint_product_supplier"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

    <!-- Supplier's email -->
    <LinearLayout
        android:id="@+id/container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_email"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <!-- Input field - Name -->
            <EditText
                android:id="@+id/edit_product_email"
                android:hint="@string/hint_product_email"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

    <!-- Quantity of the product -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:orientation="horizontal">

            <!-- Input field - Quantity -->
            <EditText
                android:id="@+id/edit_product_quantity"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/add_image_product"
        android:onClick="addImage"
        style="@style/ButtonStyle"
        android:layout_margin="@dimen/activity_margin"
        android:text="@string/button_add_image"/>

    <ImageView
        android:id="@+id/display_image_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>