<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Name of the product -->
    <LinearLayout
        android:id="@+id/container_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_name"
            style="@style/CategoryStyle" />

        <TextView
            android:id="@+id/view_product_name"
            android:inputType="textCapWords"
            style="@style/EditorFieldStyle"
            android:text=""/>

    </LinearLayout>

    <!-- Price of the product -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

            <TextView
                android:id="@+id/view_product_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Supplier of the product -->
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle" />

            <TextView
                android:id="@+id/view_product_supplier"
                style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Supplier's email -->
    <LinearLayout
        android:id="@+id/container_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_email"
            style="@style/CategoryStyle" />

            <TextView
                android:id="@+id/view_product_email"
                style="@style/EditorFieldStyle" />
    </LinearLayout>

    <!-- Quantity of the product -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

            <TextView
                android:id="@+id/view_product_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:text="@string/category_manager"
            android:textSize="@dimen/tittle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:text="@string/adjust_stock" />

                <TextView
                    style="@style/CategoryStyle"
                    android:layout_width="match_parent"
                    android:gravity="right"
                    android:text="@string/switch_mode"/>

                <Switch
                    android:id="@+id/switchAdjust"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:onClick="stateMessage"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin">

                    <Button
                        style="@style/smallButtons"
                        android:onClick="actionDecrease"
                        android:text="@string/minus" />

                    <TextView
                        android:id="@+id/view_adjust_stock"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="0" />

                    <Button
                        style="@style/smallButtons"
                        android:onClick="actionIncrease"
                        android:text="@string/plus" />
                </LinearLayout>

                <Button
                    android:id="@+id/adjust_stock"
                    style="@style/ButtonStyle"
                    android:background="@color/colorPrimaryLight"
                    android:onClick="adjustStock"
                    android:text="@string/action_adjust" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_margin"
            android:layout_marginRight="@dimen/activity_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                style="@style/CategoryStyle"
                android:layout_gravity="center_horizontal"
                android:layout_weight="3"
                android:gravity="right"
                android:text="@string/order_product" />

            <Button
                android:id="@+id/order_stock"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:background="@color/colorPrimaryLight"
                android:onClick="sendEmail"
                android:text="@string/action_order" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>